<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/newProduct"
        android:icon="@drawable/packagebox"
        android:title="@string/new_product"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/requests"
        android:icon="@drawable/list"
        android:title="requests"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/config"
        android:title="@string/strSett"
        app:showAsAction="never" />

    <item
        android:id="@+id/exit"
        android:title="@string/strexit"
        app:showAsAction="never" />
</menu>