<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_gray"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.AuthActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bgnhongalogo"
        android:importantForAccessibility="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:background="@drawable/edt"
            android:ems="10"
            android:hint="@string/strEmail"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edt"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="14dp"

            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutacess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strsignin"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strsignup"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutentity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible"
        >


        <TextView
            android:id="@+id/textView12"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strEntity"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchentity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strEntityII"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:text="@string/stbrnauth"
            android:textColor="#D81B60"
            android:theme="@style/buttonDefault" />
    </LinearLayout>

</LinearLayout>