<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_gray"
    android:orientation="vertical"
    tools:context=".activity.ProductActivity">

    <include
        android:id="@+id/in"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="14dp">

            <ImageView
                android:id="@+id/imgProduct1"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:padding="12dp"
                android:src="@drawable/imagedefault"
                tools:ignore="HardcodedText,ImageContrastCheck" />

            <ImageView
                android:id="@+id/imgProduct2"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:src="@drawable/imagedefault"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            >
            <EditText
                android:id="@+id/edtProdName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt"
                android:padding="14dp"
                android:textSize="20sp"
                android:hint="@string/strProdName"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/edtProdPrice"
                android:background="@drawable/edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="14dp"
                android:textSize="20sp"
                android:hint="@string/strProdPrice"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/edtProdPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt"
                android:padding="14dp"
                android:textSize="20sp"
                android:hint="@string/strProdPhone"
                android:autofillHints=""
                android:ems="10"
                android:inputType="phone"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/edtProdDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt"
                android:padding="14dp"
                android:textSize="20sp"
                android:hint="@string/strProdDesc"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/btnSaveProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:text="@string/strBtnAdsConfSave"
                android:textSize="16sp"
                android:textColor="#D81B60"
                android:theme="@style/buttonDefault" />

        </LinearLayout>

</LinearLayout>
</LinearLayout>